changed order of function parameters